Mon Feb 25 12:34:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * data/driver.list:
   - add APC BACK-UPS XS LCD (reported by Chad Miller), (backport from trunk)
   - USB completion for Powerware (for PW5115 and PW9120)

Fri Feb 22 19:14:04 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/*.c: The upscli_disconnect() function does no longer LOGOUT
   from the server. Adding this to the clients that use this to prevent
   the server from logging warnings.

Fri Feb 22 19:12:20 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/skel.c: Added setvar function.

Fri Feb 22 18:45:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: HU_FLAG_ABSENT implies that the value isn't stored
   in the UPS, so the HU_FLAG_STATIC is redundant.
 - drivers/usbhid-ups.c: Allow changing server side variables (bugfix).

Tue Feb 19 13:05:00 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Fix scripts/udev/nut-usbups.rules.in to include Powerware 5115 9120 and
   all the powerware using the PHOENIXTEC interface.

Fri Feb 15 15:29:08 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Integrated Power Management (HAL integration):
   - fix the reporting of the battery technology,
   - fix the reporting of levels by adding a warning and a critical level,
   - report battery granularity,
   - only report the charging status if the battery charge is below 100 %,
   - report the current battery computed state (capacity_state),
   - report battery.alarm.{design,unit}

Thu Feb 14 08:47:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - man/megatec_usb.8, man/upscode2.8, man/bcmxcp.8, man/bcmxcp_usb.8,
   man/solis.8, man/rhino.8: fix various errors (backport from the trunk r1304)

Wed Feb 13 19:47:32 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: output signal overrides must be handled
   in upsdrv_initups(), since we might go straight to upsdrv_shutdown()
   afterwards.
